fix header alignment for mobile

--- a/scss/style.css
+++ b/scss/style.css
@@ -413,6 +413,30 @@
   font-size: 14px;
 }
 
+@media all and (max-width: 700px) {
+  #dropdown-menu {
+    left: 203px;
+  }
+}
+
+@media all and (max-width: 540px) {
+  #dropdown-menu {
+    left: 150px;
+  }
+}
+
+@media all and (max-width: 470px) {
+  #dropdown-menu {
+    left: 110px;
+  }
+}
+
+@media all and (max-width: 400px) {
+  #dropdown-menu {
+    left: 66px;
+  }
+}
+
 .hero-section__img .overlay-text, .about-text, .activity-card .activity-card__details, .icon-container span, .pricing-card .pricing-content, .about-us article {
   position: absolute;
   left: 50%;
